add bulletpoints to some lists, correct responsive logo, fix linter errors, add mobile menu, correct gradients, add hover gradients,

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="uppernav">
+      <nav class="black-nav">
         <ul class="upper-left">
           <li>News</li>
           <li>TNW2020</li>
@@ -49,8 +49,13 @@
             <li class="change-on-mobile">README</li>
             <li class="change-on-mobile">NEURAL</li>
           </ul>
-          <div class="search-button-container">
-            <i class="fas fa-search fa-flip-horizontal fa-lg"></i>
+          <div class="mobile-nav-icons-container">
+            <div class="search-button-container">
+              <i class="fas fa-search fa-flip-horizontal fa-lg"></i>
+            </div>
+            <div class="hamburger-button-container">
+              <i class="fas fa-bars fa-lg"></i>
+            </div>
           </div>
         </nav>
         <div class="banner">
@@ -73,12 +78,12 @@
             masks
           </h2>
           <ul class="cover-footer">
-            <li>by <a href="#">Thomas Macaulay</a></li>
-            <li>
+            <li class="cover-footer-li">by <a href="#">Thomas Macaulay</a></li>
+            <li class="cover-footer-li">
               <i class="far fa-clock"></i>
               <p>1 hour ago</p>
             </li>
-            <li>
+            <li class="cover-footer-li">
               <i class="fas fa-share-alt"></i>
               15
             </li>
@@ -89,12 +94,12 @@
         <p class="insights">INSIGHTS</p>
         <h2 class="aside-head">How to make lemonade out of shit</h2>
         <ul class="cover-footer">
-          <li>by <a href="#">Tristan Greene</a></li>
-          <li>
+          <li class="cover-footer-li">by <a href="#">Tristan Greene</a></li>
+          <li class="cover-footer-li">
             <i class="far fa-clock"></i>
             <p>1 hour ago</p>
           </li>
-          <li>
+          <li class="cover-footer-li">
             <i class="fas fa-share-alt"></i>
             15
           </li>
@@ -107,12 +112,12 @@
         </h2>
 
         <ul class="cover-footer">
-          <li>by <a href="#">David Canellis</a></li>
-          <li>
+          <li class="cover-footer-li">by <a href="#">David Canellis</a></li>
+          <li class="cover-footer-li">
             <i class="far fa-clock"></i>
             <p>1 hour ago</p>
           </li>
-          <li>
+          <li class="cover-footer-li">
             <i class="fas fa-share-alt"></i>
             15
           </li>
@@ -992,34 +997,34 @@
       <div class="main-footer-upper">
         <div class="main-footer-upper-links-container">
           <ul class="main-footer-upper-links-container-iconslist">
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fab fa-facebook"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fab fa-twitter-square"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fab fa-youtube-square"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fab fa-instagram"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fab fa-pinterest-p"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="fas fa-rss"></i></div>
             </li>
-            <li>
+            <li class="main-footer-upper-links-container-iconslist-li">
               <div><i class="far fa-envelope"></i></div>
             </li>
           </ul>
           <ul class="footer-links">
-            <li>EVENTS</li>
-            <li>ABOUT</li>
-            <li>ADVERTISE</li>
-            <li>JOBS</li>
-            <li>CONTACT</li>
+            <li class="footer-links-li">EVENTS</li>
+            <li class="footer-links-li">ABOUT</li>
+            <li class="footer-links-li">ADVERTISE</li>
+            <li class="footer-links-li">JOBS</li>
+            <li class="footer-links-li">CONTACT</li>
           </ul>
         </div>
       </div>
