--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
       <div class="funding-main">
         <div class="fund">
           <div class="fund-top">
-            <h3>Neosurance</h3>
+            <h3>SourceDay</h3>
             <div class="fund-top-bottom">
-              <p class="fund-amt">$1.1M</p>
-              <p class="fund-type">VENTURE CAPITAL</p>
+              <p class="fund-amt">$12.5M</p>
+              <p class="fund-type">SERIES B</p>
               <img
                 src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F674824432267882496%2FHodUGxme.jpg&signature=77e7fac7899cf9bbc67c4c9a1ca35e3d"
                 alt=""
@@ -245,22 +245,22 @@
             </div>
           </div>
           <div class="fund-center">
-            <p>Insurance</p>
-            <p>Net Insurance, +2</p>
+            <p><i class="fas fa-tag"></i>Enterprise Software</p>
+            <p><i class="fas fa-briefcase"></i>Draper Associates, +3</p>
           </div>
           <div class="fund-foot">
             <p>
-              Neosurance Closes €1.1M Funding Round
+              Supplier Collaboration Company SourceDay Closes $12.5 Million
             </p>
-            <small>on FinSMEs</small>
+            <small>on Pulse 2.0</small>
           </div>
         </div>
 
         <div class="fund">
           <div class="fund-top">
-            <h3>Neosurance</h3>
+            <h3>Rise Robotics</h3>
             <div class="fund-top-bottom">
-              <p class="fund-amt">$1.1M</p>
+              <p class="fund-amt">$3M</p>
               <p class="fund-type">VENTURE CAPITAL</p>
               <img
                 src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1247453178280337409%2FC2aNcKN7.jpg&signature=bba389df2b9afc7378c28319af18c901"
@@ -270,12 +270,12 @@
             </div>
           </div>
           <div class="fund-center">
-            <p>Insurance</p>
-            <p>Net Insurance, +2</p>
+            <p><i class="fas fa-tag"></i>Finance</p>
+            <p><i class="fas fa-briefcase"></i>A.Capital Ventures, +2</p>
           </div>
           <div class="fund-foot">
             <p>
-              Neosurance Closes €1.1M Funding Round
+              Rise Robotics Secures $3M in Funding
             </p>
             <small>on FinSMEs</small>
           </div>
@@ -283,10 +283,10 @@
 
         <div class="fund">
           <div class="fund-top">
-            <h3>Neosurance</h3>
+            <h3>Darmiyan, Inc.</h3>
             <div class="fund-top-bottom">
-              <p class="fund-amt">$1.1M</p>
-              <p class="fund-type">VENTURE CAPITAL</p>
+              <p class="fund-amt">$6M</p>
+              <p class="fund-type">SEED FUND</p>
               <img
                 src="https://img-cdn.tnwcdn.com/image?url=https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F1124794302310150146%2FtqFn7FWE.jpg&signature=67692c2ac8a25aebaf32fc7d2b1dc6e0"
                 alt=""
@@ -295,12 +295,12 @@
             </div>
           </div>
           <div class="fund-center">
-            <p>Insurance</p>
-            <p>Net Insurance, +2</p>
+            <p><i class="fas fa-tag"></i>Biotechnology</p>
+            <p><i class="fas fa-briefcase"></i>IT-Farm, +2</p>
           </div>
           <div class="fund-foot">
             <p>
-              Neosurance Closes €1.1M Funding Round
+              Darmiyan Raises $6M in Initial Close of Seed Funding
             </p>
             <small>on FinSMEs</small>
           </div>
