--- a/index.html
+++ b/index.html
@@ -320,8 +320,8 @@
             </div>
           </div>
           <div class="fund-center">
-            <p>Insurance</p>
-            <p>Net Insurance, +2</p>
+            <p><i class="fas fa-tag"></i>Insurance</p>
+            <p><i class="fas fa-briefcase"></i>Net Insurance, +2</p>
           </div>
           <div class="fund-foot">
             <p>
